File Update to version v0.1.0.5

--- a/seting.ini
+++ b/seting.ini
@@ -1,7 +1,13 @@
 [ILC]
 Name=TRNF00082
 Serial=001234567890
+Server=192.168.0.100
 [SETING]
+Dest=F:
 Destination=F:
+[FTP]
+DestIP=192.168.0.82
+Name=anonymous
+Pass=anonymous
 []
 =001354241729
